src/components/FormInput/FormInput.css
.form-label {
  margin: 0 0 18px;
  max-width: 325px;
  width: 100%;
  height: 47px;
  font-family: Inter;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
  line-height: 15px;
  color: #2f71e5;
  text-align: left;
  text-transform: capitalize;
}

.form-label::placeholder {
  font-family: Inter;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 17px;
  color: #000000;
  opacity: .2;
}

.form-input {
  margin-bottom: 10px;
  border: none;
  width: 90%;
  border-bottom: 1px solid #000;
  padding: 10px 4px;
}

.input-error {
  height: 15px;
  padding: 14px 0 0;
  margin: -27px 0 14px;
  display: block;
  font-family: 'Inter', Arial, sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 15px;
  letter-spacing: 0em;
  text-align: left;
  opacity: 1;
  color: #ff0000;
}

@media (min-width: 768px) {
  .form-label {
    margin: 30px 0;
    width: 475px;
    height: 25px;
  }
}

